[gd_scene load_steps=2 format=3 uid="uid://bk6fgtrn4x1ky"]

[ext_resource type="Script" uid="uid://ivjgicgyad7x" path="res://Assets/Scripts/UI/level_selection_screen.gd" id="1_0sosv"]

[node name="Level_selection_screen" type="CanvasLayer"]
script = ExtResource("1_0sosv")

[node name="ColorRect" type="ColorRect" parent="."]
process_mode = 3
z_index = -1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.026266154, 0.029377338, 0.039243706, 1)

[node name="level1" type="Button" parent="."]
top_level = true
z_index = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -521.0
offset_top = -209.0
offset_right = -389.0
offset_bottom = -99.0
grow_horizontal = 2
grow_vertical = 2
text = "1"

[node name="level2" type="Button" parent="."]
top_level = true
z_index = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -296.0
offset_top = -209.0
offset_right = -164.0
offset_bottom = -99.0
grow_horizontal = 2
grow_vertical = 2
text = "2"

[node name="level3" type="Button" parent="."]
top_level = true
z_index = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -66.0
offset_top = -209.0
offset_right = 66.0
offset_bottom = -99.0
grow_horizontal = 2
grow_vertical = 2
text = "3
"

[node name="level4" type="Button" parent="."]
top_level = true
z_index = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 158.0
offset_top = -209.0
offset_right = 290.0
offset_bottom = -99.0
grow_horizontal = 2
grow_vertical = 2
text = "4"

[node name="level5" type="Button" parent="."]
top_level = true
z_index = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 391.0
offset_top = -209.0
offset_right = 523.0
offset_bottom = -99.0
grow_horizontal = 2
grow_vertical = 2
text = "5"

[node name="level6" type="Button" parent="."]
top_level = true
z_index = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -521.0
offset_top = -39.0
offset_right = -389.0
offset_bottom = 71.0
grow_horizontal = 2
grow_vertical = 2
text = "6"

[node name="level7" type="Button" parent="."]
visible = false
top_level = true
z_index = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -296.0
offset_top = -39.0
offset_right = -164.0
offset_bottom = 71.0
grow_horizontal = 2
grow_vertical = 2
text = "1"

[node name="level8" type="Button" parent="."]
visible = false
top_level = true
z_index = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -66.0
offset_top = -39.0
offset_right = 66.0
offset_bottom = 71.0
grow_horizontal = 2
grow_vertical = 2
text = "1"

[node name="level9" type="Button" parent="."]
visible = false
top_level = true
z_index = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 158.0
offset_top = -39.0
offset_right = 290.0
offset_bottom = 71.0
grow_horizontal = 2
grow_vertical = 2
text = "1"

[node name="level10" type="Button" parent="."]
visible = false
top_level = true
z_index = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 391.0
offset_top = -39.0
offset_right = 523.0
offset_bottom = 71.0
grow_horizontal = 2
grow_vertical = 2
text = "1"

[node name="level11" type="Button" parent="."]
visible = false
top_level = true
z_index = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -521.0
offset_top = 126.0
offset_right = -389.0
offset_bottom = 236.0
grow_horizontal = 2
grow_vertical = 2
text = "1"

[node name="level12" type="Button" parent="."]
visible = false
top_level = true
z_index = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -296.0
offset_top = 126.0
offset_right = -164.0
offset_bottom = 236.0
grow_horizontal = 2
grow_vertical = 2
text = "1"

[node name="level13" type="Button" parent="."]
visible = false
top_level = true
z_index = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -66.0
offset_top = 126.0
offset_right = 66.0
offset_bottom = 236.0
grow_horizontal = 2
grow_vertical = 2
text = "1"

[node name="level14" type="Button" parent="."]
visible = false
top_level = true
z_index = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 158.0
offset_top = 126.0
offset_right = 290.0
offset_bottom = 236.0
grow_horizontal = 2
grow_vertical = 2
text = "1"

[node name="level15" type="Button" parent="."]
visible = false
top_level = true
z_index = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 391.0
offset_top = 126.0
offset_right = 523.0
offset_bottom = 236.0
grow_horizontal = 2
grow_vertical = 2
text = "1"

[node name="Label" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -49.5
offset_top = 133.0
offset_right = 49.5
offset_bottom = 193.0
grow_horizontal = 2
text = "Select level :"

[connection signal="pressed" from="level1" to="." method="_on_level_1_pressed"]
[connection signal="pressed" from="level2" to="." method="_on_level_2_pressed"]
[connection signal="pressed" from="level3" to="." method="_on_level_3_pressed"]
[connection signal="pressed" from="level4" to="." method="_on_level_4_pressed"]
[connection signal="pressed" from="level5" to="." method="_on_level_5_pressed"]
[connection signal="pressed" from="level6" to="." method="_on_level_6_pressed"]
