extends CanvasLayer


func _on_level_1_pressed() -> void:
	get_parent().current_level_index = 0


func _on_level_2_pressed() -> void:
	get_parent().current_level_index = 1


func _on_level_3_pressed() -> void:
	get_parent().current_level_index = 2


func _on_level_4_pressed() -> void:
	get_parent().current_level_index = 3


func _on_level_5_pressed() -> void:
	get_parent().current_level_index = 4


func _on_level_6_pressed() -> void:
	get_parent().current_level_index = 5


func _on_level_7_pressed() -> void:
	get_parent().current_level_index = 6


func _on_level_8_pressed() -> void:
	get_parent().current_level_index = 7


func _on_level_9_pressed() -> void:
	get_parent().current_level_index = 8


func _on_level_10_pressed() -> void:
	get_parent().current_level_index = 9
